# photoshare_app

./: .env  .env.example  .gitignore  1.env  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: 6edae488d0e0_init.py  env.py
migrations/versions/: 04d2ebe2d8a7_init.py  050d66cc381d_init.py  07886bd5413a_fit2.py  09868c6cd902_init.py  0f4245f77a68_init.py  14795a7390b5_init.py  17a90d03a7bc_init.py  17c288379b27_init.py  1adda4154790_init.py  238434368199_3.py  24551f7f7139_init.py  24eef7241543_init.py  266974d58e0d_fit6.py  3a30dc20d94e_init.py  3b38d514baff_init.py  3d7d3d46e78b_init.py  3f632ba11468_init.py  40ff7dcb9d7b_init.py  480f3113ecb8_fit4.py  49b948a6fa7f_init.py  4b46150d532c_init.py  4fd0dbb838a3_init.py  4febdc146d53_fit3.py  5cee8ded9483_fit5.py  5fb0e6394d98_init.py  61d748bb4f7d_init.py  676030021709_init.py  678f36ed4dd0_fit.py  68883f65768f_f3.py  6a48e953ba86_init.py  6c756b7ba4d7_2.py  6ea3142fde9c_init.py  6edae488d0e0_init.py  6f401ec5cfb1_init.py  713e80d2342e_init.py  71d08d26ad80_init.py  7344bbe48e9b_init.py  7497704715ec_init.py  7ecb60eeaf00_init.py  8329775059b0_init.py  (+26 more)
ms/: env.py
ms/versions/: 3332c3e2907f_plus2.py  861d705e302f_pl3.py  d0e1c4d4dcc5_pl4.py  e5252d2ff9f6_plus1.py
src/conf/: cloudinary.py  config.py  messages.py  transformation.py
src/database/: db.py  models.py
src/entity/: models.py
src/repository/: comments.py  posts.py  profile.py  rating.py  search.py  tags.py  transformation.py  users.py
src/routes/: auth.py  comments.py  photo_url_qr.py  posts.py  rating.py  search.py  tags.py  transformation.py  users.py
src/schemas/: comment.py  post.py  posts.py  rating.py  tag.py  tags.py  transformation.py  user.py
src/services/: auth.py  email.py
src/services/templates/: reset_password.html  verify_email.html
src/templates/: index.html
(+2 files in other folders)
