[tool.poetry]
name = "photoshare-app"
version = "0.1.0"
description = ""
authors = ["Bohdan Boiprav <122865615+bohdanboiprav@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
gravatar = "^0.1"
libgravatar = "^1.0.4"
redis = "^5.0.1"
jose = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-limiter = "^0.1.6"
uvicorn = "^0.25.0"
fastapi-mail = "^1.4.1"
fastapi-asyncpg = "^1.0.1"
python-multipart = "^0.0.6"
cloudinary = "^1.38.0"
bcrypt = "^4.1.2"
uuid = "^1.30"
qrcode = "^7.4.2"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
